<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
     <fragment
        android:id="@+id/mytopbar"
        android:name="com.lsfb.dsjc.fragment.Topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_high" />

    
      <!-- 请新输入密码 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_liner_h"
        android:background="@drawable/bg_register"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/register_liner_l_b" >

        <ImageView
            android:layout_width="@dimen/register_img"
            android:layout_height="@dimen/register_img"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/register_img_m_l"
            android:background="@color/mnull"
            android:contentDescription="@string/inputnewpassword"
            android:src="@drawable/img_password1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/white"
            android:hint="@string/inputpassword"
            android:textColor="@color/mtextcolor1"
            android:textColorHint="@color/mtextcolor1" />
    </LinearLayout>
    <!-- 请再次输入密码 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_liner_h"
        android:background="@drawable/bg_register"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/register_liner_l_b" >

        <ImageView
            android:layout_width="@dimen/register_img"
            android:layout_height="@dimen/register_img"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/register_img_m_l"
            android:background="@color/mnull"
            android:contentDescription="@string/inputpassword2"
            android:src="@drawable/img_password2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/white"
            android:hint="@string/inputpassword2"
            android:textColor="@color/mtextcolor1"
            android:textColorHint="@color/mtextcolor1" />
    </LinearLayout>

    
     <!-- 确认修改 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/register_btnline_m" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/register_btn_m"
            android:background="@drawable/bluebtn"
            android:text="@string/btn_okrepassword"
            android:textColor="@android:color/white"
            android:textSize="@dimen/basetextseiz_l" />
    </LinearLayout>
    
</LinearLayout>
